--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Django==2.2
 django-extensions==3.0.5
 djangorestframework==3.11.1
 ipython==7.17.0
+pytest==6.0.1
+pytest-cov==2.10.1
+pytest-django==3.9.0
