--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2
 django-extensions==3.0.5
 djangorestframework==3.11.1
+gunicorn==20.0.4
 ipython==7.17.0
 pytest==6.0.1
 pytest-cov==2.10.1
